Modified RoutePlan and Action